# enterprise-api-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 0001_initial_schema.py  0004_add_inventory_tx_index.py
backend/: .coveragerc  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/scripts/: benchmark.py  run.sh
backend/src/: celery_app.py  config.py  database.py  main.py  seed.py
backend/tests/: test_api_admin.py  test_api_auth_edge.py  test_comprehensive.py  test_inventory.py  test_orders.py  test_services_inventory.py
docs/: blog-post-draft.md
frontend/: .env.development  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/e2e/: analytics.spec.ts  auth.spec.ts  dashboard.spec.ts  header.spec.ts  inventory.spec.ts  navigation.spec.ts  orders.spec.ts  products-crud.spec.ts  products.spec.ts  responsive.spec.ts  settings.spec.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  (+3 more)
nginx/: nginx.conf
postman/: collection.json  environment.json
scripts/: backup_db.sh
src/: config.py  exceptions.py  limiter.py  main.py  seed.py
tests/: conftest.py  test_api_admin.py  test_api_warehouses.py  test_auth.py  test_health.py  test_integration.py  test_products.py  test_services_orders.py
(+172 files in other folders)
